# job_reaserch_helper

./: .gitignore  README.md  main.py  pyproject.toml
save_files/: csv_vacancy_data.csv  excel_vacancy_data.xlsx  json_vacancy_data.json
src/: abstract_parser.py  func.py  vacancy.py
src/hhru/: hhru_parser.py
src/superjob/: superjob_parser.py
views/: view.py
views/save/: abstract_save.py  csv_save.py  exсel_save.py  json_save.py
