[tool.poetry]
name = "job-reasearch-helper"
version = "0.1.0"
description = ""
authors = ["Антон Федяев <fearthe54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
marshmallow = "^3.20.2"
marshmallow-dataclass = "^8.6.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
